--- a/ProjetCovoiturage/ProjetCovoiturage/Views/Shared/_Layout.cshtml
+++ b/ProjetCovoiturage/ProjetCovoiturage/Views/Shared/_Layout.cshtml
@@ -26,6 +26,8 @@
                     <li>@Html.ActionLink("Trajets", "Index", "Trajets")</li>
                     <li>@Html.ActionLink("À propos de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("In English", "PageEN", "Home")</li>
+                    <li>@Html.ActionLink("En Français", "PageFR", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
