--- a/ProjetCovoiturage/ProjetCovoiturage/Views/Trajets/Index.cshtml
+++ b/ProjetCovoiturage/ProjetCovoiturage/Views/Trajets/Index.cshtml
@@ -12,6 +12,9 @@
 <table class="table">
     <tr>
         <th>
+            @Html.DisplayNameFor(model => model.Chauffeur.Nom)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.VilleDepart)
         </th>
         <th>
@@ -38,6 +41,9 @@
 @foreach (var item in Model) {
     <tr>
         <td>
+            @Html.DisplayFor(modelItem => item.Chauffeur.Nom)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.VilleDepart)
         </td>
         <td>
@@ -59,9 +65,9 @@
             @Html.DisplayFor(modelItem => item.HeureArrivee)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
         </td>
     </tr>
 }
